--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
   "author": "Ever",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.12.10",
     "@babel/generator": "^7.12.5",
     "@babel/parser": "^7.12.7",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "@babel/traverse": "^7.12.9",
     "@babel/types": "^7.12.7",
+    "@testing-library/dom": "^7.28.1",
     "autoprefixer": "^10.0.2",
-    "babel-loader": "^8.2.1",
+    "babel-loader": "^8.2.2",
     "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.3.1",
